# mocha

./: .clang-format  .clang-tidy  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
doc/img/: mocha.d2
doc/proj/: axi_xbar.md  stages.md
doc/ref/: arch.md  dev_guide.md
hw/data/: lowrisc.vmem
hw/ip/common_cells/: common_cells.core
hw/top_chip/: chip_mocha_genesys2.core  top_chip_system.core  top_pkg.core
hw/top_chip/data/: pins_genesys2.xdc  rstmgr_cfg.hjson  timing_genesys2.xdc
hw/top_chip/dv/: mocha_sim_cfgs.hjson  top_chip_sim.core  top_chip_sim_cfg.hjson
hw/top_chip/ip/: gen_xilinx_ip.tcl
hw/top_chip/lint/: top_chip.vlt  top_chip_system.vlt
hw/top_chip/rtl/: axi_frame_buffer.sv  axi_sram.sv  chip_mocha_genesys2.sv  clkgen_xil7series.sv  mem_downsizer.sv  tmds_enc.sv  top_chip_system.sv  top_pkg.sv  video_tx.sv
hw/top_chip/tmp_sim_cfg/: gpio_sim_cfg.hjson  i2c_sim_cfg.hjson  rom_ctrl_32kB_sim_cfg.hjson  rom_ctrl_base_sim_cfg.hjson  rv_dm_base_sim_cfg.hjson  rv_dm_use_jtag_interface_sim_cfg.hjson
nix/: fpga.nix
rdl/: mocha.rdl
rdl/ip/: ethernet.rdl  plic.rdl  rstmgr.rdl  rv_timer.rdl  spi_device.rdl  uart.rdl
sw/: CMakeLists.txt  cheri_toolchain.cmake  link.ld  memory.ld
sw/cmake/: linux.cmake  opensbi.cmake  tests.cmake  uboot.cmake
sw/device/: CMakeLists.txt
sw/device/examples/: i2c.c  (+4 more)
sw/device/lib/boot/: CMakeLists.txt  boot.S  init_vectors.S  memory.ld  mocha.ld
util/: artefacts.py  check_artefacts.py  clang_format.py  clang_tidy.py  fpga_runner.py  ppm_to_vmem.py  rdlgenerator.py  verilator_runner.sh
(+112 files in other folders)
